<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/registerLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:alpha="0"
            android:contentDescription="@string/application_logo"
            android:src="@drawable/jgrp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:alpha="1" />

        <TextView
            android:id="@+id/headlineRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha="0"
            android:text="@string/register"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerLogo"
            tools:alpha="1" />

        <EditText
            android:id="@+id/ed_register_name"
            style="@style/CustomTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:hint="@string/type_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@id/headlineRegister"
            tools:alpha="1" />

        <com.jimbonlemu.whacchudoin.components.EmailTextFormField
            android:id="@+id/ed_register_email"
            style="@style/CustomTextField"
            android:alpha="0"
            android:hint="@string/type_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_register_name"
            tools:alpha="1" />

        <com.jimbonlemu.whacchudoin.components.PasswordTextFormField
            android:id="@+id/ed_register_password"
            style="@style/CustomTextField"
            android:alpha="0"

            android:hint="@string/type_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/ed_register_email"
            app:layout_constraintTop_toBottomOf="@id/ed_register_email"
            tools:alpha="1" />

        <com.jimbonlemu.whacchudoin.components.PasswordTextFormField
            android:id="@+id/ed_confirm_register_password"
            style="@style/CustomTextField"
            android:alpha="0"
            android:hint="@string/type_password_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/ed_register_password"
            app:layout_constraintTop_toBottomOf="@id/ed_register_password"
            tools:alpha="1" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:alpha="0"
            android:paddingVertical="12dp"
            android:text="@string/register"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_confirm_register_password"
            tools:alpha="1" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:alpha="0"
            android:text="@string/already_have_an_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_register"
            tools:alpha="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
